syntax = "proto3";

package api.v1;

import "buf/validate/validate.proto";

enum GeoPositionMode {
  GEO_AUTO = 0;
  GEO_MANUAL = 1;
  GEO_ALWAYS_MANUAL = 2;
}

message GeoPosition {
  optional float azimuth = 1 [(buf.validate.field).required = true, (buf.validate.field).float = {gte: 0, lt: 360}];
  optional GeoCoordinate coordinate = 2 [(buf.validate.field).required = true];
}

message GeoCoordinate {
  // Latitude in decimal degrees
  optional double latitude = 1 [(buf.validate.field).required = true, (buf.validate.field).double.gte = -90.0, (buf.validate.field).double.lt = 90.0];
  // Longitude in decimal degrees
  optional double longitude = 2 [(buf.validate.field).required = true, (buf.validate.field).double.gte = -180.0, (buf.validate.field).double.lt = 180.0];
  // Altitude in meters above sea level
  optional float altitude = 3;
}

message WorkzoneSector {
  optional uint32 number = 1 [(buf.validate.field).required = true];
  optional float distance = 2 [(buf.validate.field).required = true];
  optional float min_angle = 3 [(buf.validate.field).required = true, (buf.validate.field).float = {gte: 0, lt: 360}];
  optional float max_angle = 4 [(buf.validate.field).required = true, (buf.validate.field).float = {gte: 0, lt: 360}];
}

message HwInfo {
  optional float temperature = 1;
  optional float voltage = 2;
  optional float current = 3;
}
